--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -59,7 +59,7 @@
     <div class="item">
       <div id="options-accordion1" class="collapse" role="tabpanel">
         {% if genres %}
-          <div class="options-group" id="genre-buttons" data-toggle="buttons">
+          <div class="btn-group btn-group-justified options-group" id="genre-buttons" data-toggle="buttons">
             {% if selected_genre == 'All' %}
               <label class="btn options-button active">
                 <input type="radio" name="genre" value="All" checked>
