--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -12,41 +12,49 @@ dopepod
     {% include 'optionsbar.html' %}
   </form>
   <div class="row results-list">
-    <div class="col-sm-3">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <ul class="browse-results-list">
       {% for podcast in podcasts1 %}
-        <h6 class="browse-result-title">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            {{ podcast.title }}
-          </a>
-        </h6>
+      <li>
+        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          {{ podcast.title }}
+        </a>
+      </li>
       {% endfor %}
+      </ul>
     </div>
-    <div class="col-sm-3">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <ul class="browse-results-list">
       {% for podcast in podcasts2 %}
-        <h6 class="browse-result-title">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            {{ podcast.title }}
-          </a>
-        </h6>
+      <li>
+        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          {{ podcast.title }}
+        </a>
+      </li>
       {% endfor %}
+      </ul>
     </div>
-    <div class="col-sm-3">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <ul class="browse-results-list">
       {% for podcast in podcasts3 %}
-        <h6 class="browse-result-title">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            {{ podcast.title }}
-          </a>
-        </h6>
+      <li>
+        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          {{ podcast.title }}
+        </a>
+      </li>
       {% endfor %}
+      </ul>
     </div>
-    <div class="col-sm-3">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <ul class="browse-results-list">
       {% for podcast in podcasts4 %}
-        <h6 class="browse-result-title">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            {{ podcast.title }}
-          </a>
-        </h6>
+      <li>
+        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          {{ podcast.title }}
+        </a>
+      </li>
       {% endfor %}
+      </ul>
     </div>
   </div>
 </div>
