--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -5,34 +5,29 @@ settings
 {% endblock %}
 
 {% block stage %}
-<!-- SETTINGS -->
-<div class="container">
-  <div class="row" id="settings">
-    <div class="col-sm-3">
-      <h2>
-        Settings
-      </h2>
-    </div>
-    <div class="col-sm-9">
-      <form id="settings-form" action="{% url 'settings' %}" method="POST">
-      {% if user_form.errors %}
-      {{ user_form.errors }}
-      {% endif %}
-      <table>
-        {{ user_form.as_table }}
-      </table>
-      {% if profile_form.errors %}
-      {{ profile_form.errors }}
-      {% endif %}
-      <table>
-        {{ profile_form.as_table }}
-      </table>
-      <button class="btn btn-outline-primary" type="submit">
-        Save changes
-      </button>
-      {% csrf_token %}
-      </form>
-    </div>
-  </div>
+<div class="col-sm-3" id="settings-side">
+  <h2>
+    Settings
+  </h2>
+</div>
+<div class="col-sm-9">
+  <form id="settings-form" action="{% url 'settings' %}" method="POST">
+  {% if user_form.errors %}
+  {{ user_form.errors }}
+  {% endif %}
+  <table>
+    {{ user_form.as_table }}
+  </table>
+  {% if profile_form.errors %}
+  {{ profile_form.errors }}
+  {% endif %}
+  <table>
+    {{ profile_form.as_table }}
+  </table>
+  <button class="btn btn-outline-primary" type="submit">
+    Save changes
+  </button>
+  {% csrf_token %}
+  </form>
 </div>
 {% endblock %}
