--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block stage %}
-<div class="col-4 col-sm-3 px-0" id="podinfo-side">
+<div class="col-4 col-sm-3" id="podinfo-side">
   <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
   <ul id="podinfo-side-list">
     <li>
@@ -76,7 +76,7 @@
     </li>
   </ul>
 </div>
-<div class="col-8 col-sm-9 pr-0" id="podinfo-main">
+<div class="col-8 col-sm-9" id="podinfo-main">
   <h5 id="podinfo-title">
     {{ podcast.title }}
   </h5>
