--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -13,11 +13,9 @@ dopepod
 <div class="container-fluid sticky-top" id="flap">
   <div class="row" id="stage">
 {% endif %}
-    <div class="container">
-      <div class="row" id="screen">
-        {% block stage %}
-        {% endblock %}
-      </div>
+    <div class="container" id="screen">
+      {% block stage %}
+      {% endblock %}
     </div>
   </div>
   <div class="row" id="multibar-scroll">
