--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -7,6 +7,13 @@ dopepod
 {% block results %}
 {% if podcasts %}
 <div class="col results-wrapper">
+  <div class="row color">
+    <div class="col texture results-bar">
+      <span class="results-info">
+        {{ results_info }}
+      </span>
+    </div>
+  </div>
   <form id="results-form" method="GET" action="{% url 'browse' %}">
     <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
     {% include 'optionsbar.html' %}
