--- a/index/templates/account/signup.html
+++ b/index/templates/account/signup.html
@@ -6,7 +6,7 @@
 register
 {% endblock %}
 
-{% block stage %}
+{% block center-stage %}
 <div class="container">
   <div class="row">
     <div class="col">
