--- a/index/templates/ajax.html
+++ b/index/templates/ajax.html
@@ -1,6 +1,6 @@
 {% block content %}
 {% endblock %}
-{% block stage %}
+{% block center-stage %}
 {% endblock %}
 {% block results %}
 {% endblock %}
