--- a/index/templates/account/login.html
+++ b/index/templates/account/login.html
@@ -7,7 +7,7 @@
 login
 {% endblock %}
 
-{% block stage %}
+{% block center-stage %}
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-auto">
