--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -4,7 +4,7 @@
 settings
 {% endblock %}
 
-{% block stage %}
+{% block center-stage %}
 <div class="col-sm-3" id="settings-side">
   <h2>
     Settings
