--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -4,9 +4,9 @@
 {{ podcast.title }}
 {% endblock %}
 
-{% block stage %}
+{% block center-stage %}
 <div class="row" id="podinfo-top">
-  <div class="col-4 pb-0" id="podinfo-side">
+  <div class="col-4 col-md-auto pb-0" id="podinfo-side">
     <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
     <ul id="podinfo-side-list">
       <li>
