--- a/index/templates/charts.html
+++ b/index/templates/charts.html
@@ -2,7 +2,7 @@
   <form id="chart-form" method="GET" action="{% url 'charts' %}">
     <!-- OPTIONS -->
     <div class="row color">
-      <div class="col texture results-bar">
+      <div class="col results-bar">
         <nav class="nav">
           <span>
             {{ chart_results_info }}
@@ -45,7 +45,7 @@
                 {% endfor %}
               </div>
             {% endif %}
-          </div>        
+          </div>
         </div>
       </div>
     </div>
