--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -13,9 +13,9 @@ dopepod
 <div class="container-fluid sticky-top" id="flap">
   <div class="row" id="stage">
 {% endif %}
-    <div class="container" id="center-stage">
+    <div class="container">
       {% include 'splash.html' %}
-      <div class="row" id="xxx">
+      <div class="row" id="center-stage">
         {% block center-stage %}
         {% endblock %}
       </div>
