--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -7,7 +7,7 @@ dopepod
 {% block results %}
 <div class="col results-wrapper">
   <div class="row color">
-    <div class="col texture results-bar">
+    <div class="col results-bar">
       <span class="results-info">
         {{ results_info }}
       </span>
