--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col results-bar">
+  <div class="col">
     <ul class="nav">
       {% if podcasts.has_other_pages %}
       <li>
