--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -1,19 +1,79 @@
+{% if splash %}
 <div class="row" id="splash">
-  <div class="col-12 col-sm-6 "id="splash-top">
+{% else %}
+<div class="row d-none" id="splash">
+{% endif %}
+  <div class="col-12"id="splash-top">
     <h4>
       Search for and listen to thousands of free podcasts on<br /><strong>dopepod</strong>
     </h4>
-  </div>
-  <div class="col-12 col-sm-6" id="splash-bottom">
-    <h5>
-      <a class="ajax-login" href="{% url 'account_login' %}">
-        Login
-      </a>
+    <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#login-collapse" aria-expanded="false" aria-controls="login-collapse">
+      <span>
+        Log In
+      </span>
+    </button>
+    <span>
       or
-      <a class="ajax-register" href="{% url 'account_signup' %}">
-        Register
-      </a>
-      now to subscribe to podcasts
-    </h5>
+    </span>
+    <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#signup-collapse" aria-expanded="false" aria-controls="signup-collapse">
+      <span>
+        Sign Up
+      </span>
+    </button>
+  </div>
+  <div class="col-12 col-lg-6" id="splash-left">
+    <div id="login-wrapper">
+      <form class="login-form" method="POST" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <label class="sr-only" for="login-login">Username or e-mail</label>
+          <input class="form-control" type="text" name="login" placeholder="Username or e-mail" autofocus="autofocus" required="" id="login-login">
+        </div>
+        <div class="form-row">
+          <div class="col form-group">
+            <label class="sr-only" for="login-password">Password</label>
+            <input class="form-control" type="password" name="password" placeholder="Password" required="" id="login-password">
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-outline-primary">Sign In</button>
+          </div>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" name="remember" id="remember">
+            Remember me
+          </label>
+        </div>
+        <a class="password-link" href="/account/password/reset/">Forgot Password?</a>
+      </form>
+    </div>
+  </div>
+  <div class="col-12 col-lg-6" id="splash-right">
+    <div id="login-wrapper">
+      <form class="signup-form" method="POST" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <label class="sr-only" for="signup-email">E-mail</label>
+          <input class="form-control" type="email" name="email" placeholder="E-mail" required="" id="signup-email">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="signup-email">Username</label>
+          <input class="form-control" type="text" name="username" placeholder="Username" autofocus="autofocus" minlength="4" maxlength="150" required="" id="signup-email">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="signup-password1">Password</label>
+          <input class="form-control" type="password" name="password1" placeholder="Password" required="" id="signup-password1">
+        </div>
+        <div class="form-row">
+          <div class="col form-group">
+            <label class="sr-only" for="signup-password">Password (again)</label>
+            <input class="form-control" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-outline-primary">Sign Up</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
