--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,4 +1,4 @@
-<div class="row texture" id="player-content">
+<div class="row" id="player-content">
   <div class="container">
     <div class="row">
       <div class="col-auto">
