--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -1,8 +1,4 @@
-{% if splash %}
-<div class="row" id="splash">
-{% else %}
-<div class="row d-none" id="splash">
-{% endif %}
+<div class="row">
   <div class="col-12"id="splash-top">
     <h4>
       Search for and listen to thousands of free podcasts on<br /><strong>dopepod</strong>
