--- a/index/static/style.css
+++ b/index/static/style.css
@@ -349,7 +349,7 @@ body {
 }
 #splash-top {
   text-align: center;
-  padding: 2rem;
+  padding: 30px 5% 0;
 }
 #splash-left {
 }
@@ -447,12 +447,10 @@ margin-bottom: 4px;
   text-decoration: none;
 }
 .results-wrapper {
-  border: 1px solid #e6ecf0;
   border-radius: .25rem;
   overflow: hidden;
   margin-top: 15px;
   margin-bottom: 15px;
-  background-color: #FFFFFF;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
